--- a/index.css
+++ b/index.css
@@ -1,1 +1,25 @@
+/* Reseteo de margen y relleno de las etiquetas*/
+* {
+    margin: 0;
+    padding: 0;
+}
 
+html{
+    
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 16px;
+}
+
+body{
+    background-color: rgb(6, 7, 6);
+    background-repeat: no-repeat ;
+    background-attachment: fixed;
+    background-size: 100% 100%;
+    color: #FFFFFFF;
+    height: 80px;
+    width: 80%;
+    margin-left: 05%
+    
+    
+
+}
